--- a/.air.toml
+++ b/.air.toml
@@ -21,12 +21,12 @@ tmp_dir = "tmp"
   poll = false
   poll_interval = 0
   rerun = false
-  rerun_delay = 500
+  rerun_delay = 1000
   send_interrupt = false
   stop_on_error = false
 
 [color]
-  app = ""
+  app = "magenta"
   build = "yellow"
   main = "magenta"
   runner = "green"
@@ -37,7 +37,7 @@ tmp_dir = "tmp"
   time = false
 
 [misc]
-  clean_on_exit = false
+  clean_on_exit = true
 
 [screen]
   clear_on_rebuild = false
